kubernetes/cert-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-solver
  namespace: cert-manager
spec:
  ports:
    - port: 8089
      protocol: TCP
      targetPort: 8089
  selector:
    role: acme-solver
